--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-    "files.associations": {
-        "*.tcc": "cpp",
-        "iomanip": "cpp",
-        "istream": "cpp"
-    }
+  "files.associations": {
+    "*.tcc": "cpp",
+    "iomanip": "cpp",
+    "istream": "cpp",
+    "iostream": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "Disabled"
 }
